@@ -23,6 +23,7 @@ Version 1.02.0
 - On 64bit, all number literals with '&' suffix (LONG type) triggered a "too big" warning, even if their value was not really too big.
 - #765: insufficient precision on FLT_MAX / DBL_MAX constants in crt/limits.bi
 - gfxlib could crash on exit, if Screen[Res] was used in a global/module constructor
+- #768: View [Screen] did not clip the given viewport coordinates to the screen properly, if x1/y1 were negative
 
 
 Version 1.01.0
